Should finally be fixed on mobile

--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ nav {
 	}
 
 	.links li {
-		opacity: 0;
+		opacity: 100%;
 	}
 
 	.nav-mobile {
